# 6dofik

./: .gitignore  CMakeLists.txt  GeomUtil.hpp  Scene.hpp  build.sh  main.cpp  robotModel.hpp  testMatrix.cpp  testMatrix2.cpp  testMatrix3.cpp  testOptimization.cpp  vcpkg.json
python/: model.py  plotTestData.py
